--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,27 @@ pywin32-ctypes==0.2.2
 whichcraft==0.6.1
 zope.event==5.0
 zope.interface==6.0
+altgraph==0.17.3
+bottle==0.12.25
+bottle-websocket==0.2.9
+cffi==1.15.1
+cryptography==41.0.3
+Eel==0.16.0
+future==0.18.3
+gevent==23.9.0.post1
+gevent-websocket==0.10.1
+greenlet==2.0.2
+pefile==2023.2.7
+psutil==5.9.5
+py-cpuinfo==9.0.0
+pycparser==2.21
+pyinstaller==5.13.2
+pyinstaller-hooks-contrib==2023.8
+PyMySQL==1.1.0
+pyparsing==3.1.1
+pywin32==306
+pywin32-ctypes==0.2.2
+whichcraft==0.6.1
+WMI==1.5.1
+zope.event==5.0
+zope.interface==6.0
